deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webserver
  template:
    spec:
      containers:
        - name: darkhttpd
          image: docker.io/alpinelinux/darkhttpd
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - name: content
              mountPath: /var/www/localhost/htdocs
      volumes:
        - name: content
          configMap:
            name: oai-web-content
