service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webserver
spec:
  ports:
    - port: 80
      targetPort: http
      name: http
  selector:
    app: webserver
  type: ClusterIP
